--- a/pkg/master/BUILD
+++ b/pkg/master/BUILD
@@ -30,6 +30,7 @@ go_library(
         "//pkg/apis/extensions/install:go_default_library",
         "//pkg/apis/flowcontrol/install:go_default_library",
         "//pkg/apis/imagepolicy/install:go_default_library",
+        "//pkg/apis/multicluster/install:go_default_library",
         "//pkg/apis/networking/install:go_default_library",
         "//pkg/apis/node/install:go_default_library",
         "//pkg/apis/policy/install:go_default_library",
@@ -60,6 +61,7 @@ go_library(
         "//pkg/registry/events/rest:go_default_library",
         "//pkg/registry/extensions/rest:go_default_library",
         "//pkg/registry/flowcontrol/rest:go_default_library",
+        "//pkg/registry/multicluster/rest:go_default_library",
         "//pkg/registry/networking/rest:go_default_library",
         "//pkg/registry/node/rest:go_default_library",
         "//pkg/registry/policy/rest:go_default_library",
@@ -93,6 +95,7 @@ go_library(
         "//staging/src/k8s.io/api/events/v1beta1:go_default_library",
         "//staging/src/k8s.io/api/extensions/v1beta1:go_default_library",
         "//staging/src/k8s.io/api/flowcontrol/v1alpha1:go_default_library",
+        "//staging/src/k8s.io/api/multicluster/v1alpha1:go_default_library",
         "//staging/src/k8s.io/api/networking/v1:go_default_library",
         "//staging/src/k8s.io/api/networking/v1beta1:go_default_library",
         "//staging/src/k8s.io/api/node/v1alpha1:go_default_library",
