--- a/pkg/registry/BUILD
+++ b/pkg/registry/BUILD
@@ -77,6 +77,9 @@ filegroup(
         "//pkg/registry/flowcontrol/flowschema:all-srcs",
         "//pkg/registry/flowcontrol/prioritylevelconfiguration:all-srcs",
         "//pkg/registry/flowcontrol/rest:all-srcs",
+        "//pkg/registry/multicluster/rest:all-srcs",
+        "//pkg/registry/multicluster/serviceexport:all-srcs",
+        "//pkg/registry/multicluster/serviceimport:all-srcs",
         "//pkg/registry/networking/ingress:all-srcs",
         "//pkg/registry/networking/ingressclass:all-srcs",
         "//pkg/registry/networking/networkpolicy:all-srcs",
