--- a/staging/src/k8s.io/client-go/kubernetes/BUILD
+++ b/staging/src/k8s.io/client-go/kubernetes/BUILD
@@ -37,6 +37,7 @@ go_library(
         "//staging/src/k8s.io/client-go/kubernetes/typed/events/v1beta1:go_default_library",
         "//staging/src/k8s.io/client-go/kubernetes/typed/extensions/v1beta1:go_default_library",
         "//staging/src/k8s.io/client-go/kubernetes/typed/flowcontrol/v1alpha1:go_default_library",
+        "//staging/src/k8s.io/client-go/kubernetes/typed/multicluster/v1alpha1:go_default_library",
         "//staging/src/k8s.io/client-go/kubernetes/typed/networking/v1:go_default_library",
         "//staging/src/k8s.io/client-go/kubernetes/typed/networking/v1beta1:go_default_library",
         "//staging/src/k8s.io/client-go/kubernetes/typed/node/v1alpha1:go_default_library",
@@ -95,6 +96,7 @@ filegroup(
         "//staging/src/k8s.io/client-go/kubernetes/typed/events/v1beta1:all-srcs",
         "//staging/src/k8s.io/client-go/kubernetes/typed/extensions/v1beta1:all-srcs",
         "//staging/src/k8s.io/client-go/kubernetes/typed/flowcontrol/v1alpha1:all-srcs",
+        "//staging/src/k8s.io/client-go/kubernetes/typed/multicluster/v1alpha1:all-srcs",
         "//staging/src/k8s.io/client-go/kubernetes/typed/networking/v1:all-srcs",
         "//staging/src/k8s.io/client-go/kubernetes/typed/networking/v1beta1:all-srcs",
         "//staging/src/k8s.io/client-go/kubernetes/typed/node/v1alpha1:all-srcs",
